array, DFS, deadlock, bubble sort problems